Descripcion de la Gata Juana

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
 	<h1>Hola Ricardo este es tu gato</h1>
 	<img src="img/gato-siames.jpg" height="400" alt="Gato Siames" />
+	<p>Esta es la gata Juana y tiene ojos azules</p>
 </body>
 </html>
